--- a/apps/contact/static/css/contact.css
+++ b/apps/contact/static/css/contact.css
@@ -5,7 +5,7 @@
 .opened {
     left: 25%;
     width: 61%;
-    padding: 1em;
+    padding: 0 1em;
 }
 
 #folded-who {
